Fix contrast issues

--- a/_sass/layouts/_indicator.scss
+++ b/_sass/layouts/_indicator.scss
@@ -405,6 +405,9 @@
         clear: left;
       }
     }
+    .indicator-cards .tags li{
+      color: #044b88;
+    }
   }
   .goal-indicators:after {
     content: "";
